Fix spacing of label

--- a/frontend/src/metabase/query_builder/components/CompareAggregations/components/OffsetInput/OffsetInput.module.css
+++ b/frontend/src/metabase/query_builder/components/CompareAggregations/components/OffsetInput/OffsetInput.module.css
@@ -1,7 +1,3 @@
 .input {
   max-width: 50px;
 }
-
-.wrapper {
-  margin-top: 0.25rem;
-}
